results/SVCOMP/4-shot/log-ExSymExe25-2024_03_18_19_20_49.txt
class Main {

  //@ ensures \result ==> (z + 1 > 0 && x + 3 > 0);
  public static boolean f() {
    int a = 3;
    Main inst = new Main();
    int b = 8;
    return inst.test(a, b, a);
  }

  //@ requires z > Integer.MIN_VALUE && x > Integer.MIN_VALUE;
  //@ ensures \result ==> (z + 1 > 0 && x + 3 > 0);
  public boolean test(int x, int y, int z) {
    System.out.println("Testing ExSymExe25");
    y = z + 1;
    z = z + x;
    x = x + 3;
    if (z > 0) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x > 0) System.out.println("branch BOO1");
    else {
      return false;
    }

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe25.java:3: error: cannot find symbol
  //@ ensures \result ==> (z + 1 > 0 && x + 3 > 0);
                           ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe25.java:3: error: cannot find symbol
  //@ ensures \result ==> (z + 1 > 0 && x + 3 > 0);
                                        ^
  symbol:   variable x
  location: class Main
2 errors

